fix bug & build

--- a/src/pages/History/HistoryDetailPage/styles.less
+++ b/src/pages/History/HistoryDetailPage/styles.less
@@ -299,7 +299,7 @@
           content: "";
           position: absolute;
           inset: 0;
-          background-image: url("@/assets/images/hoatiettrongdong.png");
+          background-image: url("/images/hoatiettrongdong.png");
           background-size: 600px;
           opacity: 0.05;
           pointer-events: none;
