--- a/src/pages/Profile/Collections/styles.less
+++ b/src/pages/Profile/Collections/styles.less
@@ -102,7 +102,7 @@
           content: "";
           position: absolute;
           inset: 0;
-          background-image: url("@/assets/images/hoatiettrongdong.png");
+          background-image: url("/images/hoatiettrongdong.png");
           background-size: 300px;
           opacity: 0.05;
         }
