--- a/src/pages/Artifact/ArtifactDetailPage/styles.less
+++ b/src/pages/Artifact/ArtifactDetailPage/styles.less
@@ -577,6 +577,14 @@
     }
     // End large-format
   }
+
+  // Related Bottom
+  .related-bottom-section {
+    margin-top: 60px;
+    .section-title {
+      .related-section-title-style();
+    }
+  }
 }
 
 // Responsive
