--- a/src/pages/Exhibition/ExhibitionDetailPage/styles.less
+++ b/src/pages/Exhibition/ExhibitionDetailPage/styles.less
@@ -344,4 +344,12 @@
       }
     }
   }
+
+  // Related Bottom
+  .related-bottom-section {
+    margin-top: 60px;
+    .section-title {
+      .related-section-title-style();
+    }
+  }
 }
