--- a/src/pages/Heritage/HeritageDetailPage/styles.less
+++ b/src/pages/Heritage/HeritageDetailPage/styles.less
@@ -805,6 +805,13 @@
       }
     }
   }
+  // Related Bottom
+  .related-bottom-section {
+    margin-top: 60px;
+    .section-title {
+      .related-section-title-style();
+    }
+  }
 }
 
 // Responsive
