--- a/src/pages/History/HistoryDetailPage/styles.less
+++ b/src/pages/History/HistoryDetailPage/styles.less
@@ -354,26 +354,10 @@
     font-size: 16px;
   }
 
-  // Related Bottom
   .related-bottom-section {
     margin-top: 60px;
     .section-title {
-      text-align: center;
-      margin-bottom: 40px;
-      color: var(--text-color-primary);
-      font-family: var(--font-serif);
-      font-weight: 700;
-      font-size: 24px;
-      position: relative;
-
-      &::after {
-        content: "";
-        display: block;
-        width: 80px;
-        height: 3px;
-        background: @seal-red;
-        margin: 16px auto 0;
-      }
+      .related-section-title-style();
     }
   }
 }
