--- a/src/pages/Heritage/HeritageDetailPage/styles.less
+++ b/src/pages/Heritage/HeritageDetailPage/styles.less
@@ -537,6 +537,10 @@
       .game-card-mini-style();
     }
 
+    .game-cta-banner {
+      .game-cta-banner-style();
+    }
+
     .product-card {
       .product-card-style();
     }
