--- a/src/pages/History/HistoryDetailPage/styles.less
+++ b/src/pages/History/HistoryDetailPage/styles.less
@@ -343,6 +343,10 @@
       .game-card-mini-style();
     }
 
+    .game-cta-banner {
+      .game-cta-banner-style();
+    }
+
     .product-card {
       .product-card-style();
     }
