--- a/src/pages/Artifact/ArtifactDetailPage/styles.less
+++ b/src/pages/Artifact/ArtifactDetailPage/styles.less
@@ -308,6 +308,10 @@
       .game-card-mini-style();
     }
 
+    .game-cta-banner {
+      .game-cta-banner-style();
+    }
+
     .product-card {
       .product-card-style();
     }
