--- a/src/pages/Home/styles.less
+++ b/src/pages/Home/styles.less
@@ -38,23 +38,12 @@
     align-items: center;
     text-align: center;
     color: white;
-    padding: 100px 20px 180px;
+    padding: 200px 20px 180px;
     background: url("/images/Zero_home.png") no-repeat bottom center;
     background-size: cover;
     margin-bottom: 0;
 
-    // Fading border at the bottom
-    &::after {
-      content: "";
-      position: absolute;
-      bottom: -36px;
-      left: 0;
-      width: 100%;
-      height: 36px;
-      background: linear-gradient(to bottom, #e232325e, rgba(255, 250, 226, 0));
-      z-index: 10;
-    }
-
+    
     .hero-content {
       position: relative;
       z-index: 2;
@@ -114,6 +103,19 @@
     padding: 120px 0; // Slightly tighter padding for better flow
     background: transparent;
     z-index: 10;
+    // Fading border at the bottom
+    &::after {
+      content: "";
+      position: absolute;
+      // bottom: -36px;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 36px;
+      background: linear-gradient(to bottom, #e232325e, rgba(255, 250, 226, 0));
+      z-index: 10;
+    }
+
 
     // Decorative spinning drum background
     .bg-drum {
@@ -573,6 +575,7 @@
         box-shadow: 0 10px 40px rgba(0, 0, 0, 0.15);
         position: relative;
         transition: transform 0.4s ease;
+        top: 0; // Fix alignment
 
         img {
           width: 100%;
