--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -1,10 +1,15 @@
 /* Global Styles */
 @import "./variables.less";
+@font-serif: "Playfair Display", serif;
+@font-sans: "Inter", sans-serif;
+
 
 :root {
   /* BINDING: Map LESS variable to CSS variable */
   /* This ensures that changing @primary-color in variables.less updates this CSS var automatically */
   --primary-color: @primary-color;
+  --font-serif: @font-serif;
+  --font-sans: @font-sans;
 }
 
 @import "antd/dist/reset.css";
@@ -23,19 +28,7 @@ body,
 }
 
 body {
-  font-family:
-    "Inter",
-    -apple-system,
-    BlinkMacSystemFont,
-    "Segoe UI",
-    "Roboto",
-    "Oxygen",
-    "Ubuntu",
-    "Cantarell",
-    "Fira Sans",
-    "Droid Sans",
-    "Helvetica Neue",
-    sans-serif;
+  font-family: @font-sans;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #f5f5f5;
@@ -63,8 +56,10 @@ h3,
 h4,
 h5,
 h6 {
+  font-family: @font-serif;
   color: #262626;
   margin-bottom: 0.5em;
+  line-height: 1.25;
 }
 
 p {
