--- a/src/pages/Game/ScanPage/styles.less
+++ b/src/pages/Game/ScanPage/styles.less
@@ -152,7 +152,7 @@
     .petal-icon-mini {
       width: 20px;
       height: 20px;
-      background-image: url("@/assets/images/petal_icon.png");
+      // background-image: url("@/assets/images/petal_icon.png");
       background-size: contain;
       background-repeat: no-repeat;
       filter: drop-shadow(0 2px 2px rgba(235, 47, 150, 0.3));
