--- a/src/pages/Game/LevelsPage/styles.less
+++ b/src/pages/Game/LevelsPage/styles.less
@@ -29,7 +29,7 @@
   justify-content: space-between;
   padding: 0 16px;
   position: sticky;
-  top: 70px;
+  top: 0;
   width: 100%;
   box-sizing: border-box;
   z-index: 100;
